gateway/1.12/modules/ROOT/pages/policies-outbound-oauth-obo.adoc
= Credential Injection OAuth 2.0 On-Behalf-Of Policy
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:keywords: oauth2, on-behalf-of, token exchange, rfc 8693, api gateway, flex gateway, gateway, policy

[width="100%", cols="5,15"]
|===
>s| Policy Name | Credential Injection OAuth 2.0 On-Behalf-Of
>s|Summary  | Exchanges incoming bearer tokens for new tokens targeting upstream services using OAuth 2.0 Token Exchange (RFC 8693)
>s|Category | Security
>s|First Flex Gateway version available | v1.12.0
>s| Returned Status Codes | No return codes exist for this policy. Error codes are returned from the upstream service.
|===

== Summary

The Credential Injection OAuth 2.0 On-Behalf-Of (OBO) policy is an outbound policy that automatically handles OAuth 2.0 token exchange for backend services. It extracts the bearer token from incoming requests, exchanges it with an identity provider using RFC 8693 Token Exchange, and injects the new token into the `Authorization` header before forwarding to the backend.

This policy enables scenarios where a service needs to act on behalf of a user when calling downstream services. The policy uses the OAuth 2.0 Token Exchange protocol (RFC 8693) to exchange the incoming access token for a new token that is scoped for the target upstream service.

== Configuring Policy Parameters

include::partial$policy-title-headers.adoc[tag=configFile]

----
- policyRef:
    name: credential-injection-oauth2-obo-policy-flex
  config:
    clientId: <string> // REQUIRED
    clientSecret: <string> // REQUIRED
    tokenEndpoint: <string> // REQUIRED
    targetType: <string> // OPTIONAL, supported values: audience or resource
    targetValue: <string> // REQUIRED
    scope: <string> // OPTIONAL
    timeout: <number> // OPTIONAL
----

[%header%autowidth.spread,cols="a,a,a,a"]
|===
|Parameter | Required or Optional | Default Value | Description

| `clientId`
| Required
| N/A
| OAuth2 client ID for token exchange.

| `clientSecret`
| Required
| N/A
| OAuth2 client secret for token exchange.

| `tokenEndpoint`
| Required
| N/A
| OAuth2 token endpoint URL. The endpoint must support RFC 8693 Token Exchange protocol.

| `targetType`
| Optional
| `audience`
| Parameter type for specifying the target service. Supported values: `audience` (logical name) or `resource` (physical URI per RFC 8707).

| `targetValue`
| Required
| N/A
| Target audience URI or resource URI for the exchanged token. This identifies the upstream service that will receive the exchanged token.

| `scope`
| Optional
| N/A
| OAuth2 scope to request for the exchanged token.

| `timeout`
| Optional
| 10000
| Timeout for token exchange requests in milliseconds.
|===

== How It Works

The policy implements the OAuth 2.0 Token Exchange flow (RFC 8693):

. *Extract Token*: The policy extracts the Bearer token from the incoming request's `Authorization` header.
. *Token Exchange*: The policy sends an RFC 8693 compliant request to the token endpoint with the following parameters:
   * `grant_type`: `urn:ietf:params:oauth:grant-type:token-exchange`
   * `subject_token`: The extracted bearer token from the incoming request
   * `subject_token_type`: `urn:ietf:params:oauth:token-type:access_token`
   * `audience` or `resource`: Based on the `targetType` configuration
   * `scope`: If configured
   * `client_id` and `client_secret`: From the policy configuration
. *Inject Token*: The policy replaces the `Authorization` header with the new exchanged token.
. *Forward Request*: The request continues to the backend with the exchanged token.

==== Target Type

The `targetType` parameter determines which RFC 8693 parameter is used:

* **`audience`** (default): Uses the `audience` parameter to specify the logical name of the target service. This is the most common approach.
* **`resource`**: Uses the `resource` parameter (RFC 8707) to specify the physical URI of the target resource.

==== Configuration Example

----
- policyRef:
    name: credential-injection-oauth2-obo-policy-flex
  config:
    clientId: my-gateway-client
    clientSecret: client-secret
    tokenEndpoint: https://keycloak.example.com/auth/realms/myrealm/protocol/openid-connect/token
    targetType: audience
    targetValue: backend-api
    scope: read write
    timeout: 10000
----

==== Azure AD Configuration Example

----
- policyRef:
    name: credential-injection-oauth2-obo-policy-flex
  config:
    clientId: gateway-app-id
    clientSecret: client-secret
    tokenEndpoint: https://login.microsoftonline.com/TENANT_ID/oauth2/v2.0/token
    targetType: audience
    targetValue: api://backend-api-guid
    scope: api://backend-api-guid/.default
    timeout: 15000
----

include::partial$policy-title-headers.adoc[tag=ui]

[%header%autowidth.spread]
|===
|Parameter |Description | Required?
|Client ID |OAuth2 client ID for token exchange. |Required
|Client Secret |OAuth2 client secret for token exchange. |Required
|Token Endpoint |OAuth2 token endpoint URL. The endpoint must support RFC 8693 Token Exchange protocol. |Required
|Target Type |Parameter type for specifying the target service. Valid values: Audience or Resource. |Optional
|Target Value |Target audience URI or resource URI for the exchanged token. |Required
|Scope |OAuth2 scope to request for the exchanged token. |Optional
|Timeout |Timeout for token exchange requests in milliseconds. |Optional
|===

== Error Handling

The policy handles the following error scenarios:

|===
|Status Code |Error |Description

| 401
| `missing_authorization`
| No `Authorization` header found in the incoming request.

| 401
| `invalid_authorization_format`
| The `Authorization` header is not in Bearer token format.

| 502
| `token_exchange_failed`
| Token endpoint error or unreachable after retries (up to 3 attempts).
|===

All errors are logged with detailed context for debugging.

== Requirements

* The token endpoint must support RFC 8693 OAuth 2.0 Token Exchange protocol.
* The incoming request must include a valid Bearer token in the `Authorization` header.
* The identity provider must be configured to allow token exchange for the specified client credentials.

== See Also

* xref:policies-outbound-oauth.adoc[Credential Injection OAuth 2.0 Policy]
* xref:policies-outbound-api-key.adoc[Credential Injection API Key Policy]
* xref:policies-outbound-basic-auth.adoc[Credential Injection Basic Authentication Policy]

